# TimeSeriesGym

./: .gitignore  LICENSE  README.md  pyproject.toml  run_agent.py
agents/: README.md  registry.py  run.py  utils.py
agents/aide/: Dockerfile  config.yaml  requirements.txt
agents/dummy/: Dockerfile  main.py  requirements.txt
agents/mlagentbench/: Dockerfile  additional_notes.txt  config.yaml  requirements.txt  start.sh
agents/openhands/: Dockerfile  config.yaml  setup.py  start.py  start.sh  templates.py  utils.py
assets/: cost_calculation.ipynb  seed0.csv  seed1.csv  seed2.csv
dev/: timeseries_kaggle_competitions.ipynb
documentation/: adding_new_agent_scaffold.md  adding_new_challenges.md  adding_new_kaggle_challenge.md
environment/: Dockerfile  grading_server.py  instructions.txt  requirements.txt  utils.py
environment/config/container_configs/: gpu_enabled.json
examples/: JUDGE_multi_artifact_eval_example_config.yaml
experiments/familiarity/: .gitignore  README.md  challenge_doc.csv  familiarity.py  get_relevant_content.py  requirements.txt
experiments/splits/: all.txt  dev.txt  lite.txt  prepare_lite.txt
scripts/: download_additional_dataset.sh  download_competitions.py
tests/: constants.py
tests/integration/: test_eval.py
tests/unit/: test_data.py
timeseriesgym/: cli.py  data.py  grade.py  grade_code_helper.py  grade_helpers.py  judge.py  metrics.py  metrics_helpers.py  missingness_helpers.py  registry.py  utils.py
timeseriesgym/competitions/: constants.py  utils.py
timeseriesgym/competitions/LANL-Earthquake-Prediction/: checksums.yaml  config.yaml  description.md  grade.py  leaderboard.csv  prepare.py
timeseriesgym/competitions/MIT-BIH-Arrhythmia/: checksums.yaml  config.yaml  description.md  download_data.py  grade.py  prepare.py
timeseriesgym/competitions/MIT-BIH-Arrhythmia-Weak-Supervision/: checksums.yaml  config.yaml  description_label_and_model.md  description_only_label.md  grade.py  prepare.py
timeseriesgym/competitions/amp-parkinsons-disease-progression-prediction/: checksums.yaml  config.yaml  (+4 more)
(+169 files in other folders)
